--- a/Igora/App.xaml
+++ b/Igora/App.xaml
@@ -3,7 +3,7 @@
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:local="clr-namespace:Igora" xmlns:System="clr-namespace:System;assembly=mscorlib"
              xmlns:xctk="http://schemas.xceed.com/wpf/xaml/toolkit"
-             StartupUri="LogInWindow.xaml">
+             StartupUri="MainWindow.xaml">
     <Application.Resources>
         
         <System:String x:Key="Company">Игора</System:String>
@@ -226,36 +226,6 @@
             </Setter>
         </Style>
 
-        <Style x:Key="WatermarkTextBox" TargetType="{x:Type TextBox}">
-            <Setter Property="FontFamily" Value="Comic Sans MS"></Setter>
-            <Setter Property="SelectionBrush" Value="#FF498C51"></Setter>
-            <Setter Property="BorderBrush" Value="#FF76E383"></Setter>
-            <Setter Property="Height" Value="30"></Setter>
-            <Setter Property="Width" Value="300"></Setter>
-            <Setter Property="HorizontalContentAlignment" Value="Left"></Setter>
-            <Setter Property="VerticalContentAlignment" Value="Center"></Setter>
-            <Setter Property="BorderThickness" Value="1"/>
-            <Setter Property="Template">
-                <Setter.Value>
-                    <ControlTemplate TargetType="{x:Type TextBox}">
-                        <Border Background="{TemplateBinding Background}"
-                                BorderBrush="{TemplateBinding BorderBrush}"
-                                BorderThickness="{TemplateBinding BorderThickness}">
-                            <Grid>
-                                <TextBlock Text="{Binding Id}">
-                                    <TextBlock.Visibility>
-                                        <MultiBinding Converter="{StaticResource InputVisability}">
-                                            <Binding ElementName="inputText" Path="Text.IsNullOrEmpty"/>
-                                            <Binding ElementName="inputText" Path="IsFocused"/>
-                                        </MultiBinding>
-                                    </TextBlock.Visibility>
-                                </TextBlock>
-                                <TextBox x:Name="inputText" Background="Transparent"/>
-                            </Grid>
-                        </Border>
-                    </ControlTemplate>
-                </Setter.Value>
-            </Setter>
-        </Style>
+       
     </Application.Resources>
 </Application>
