--- a/Igora/Pages/ConsumableDataPage.xaml
+++ b/Igora/Pages/ConsumableDataPage.xaml
@@ -6,9 +6,28 @@
       xmlns:local="clr-namespace:Igora.Pages"
       mc:Ignorable="d" 
       d:DesignHeight="450" d:DesignWidth="800"
+      IsVisibleChanged="Page_IsVisibleChanged"
       Title="ConsumableDataPage">
 
     <Grid>
+
+        <Grid.RowDefinitions>
+            <RowDefinition Height="30"/>
+            <RowDefinition Height="*"/>
+            <RowDefinition Height="50"/>
+        </Grid.RowDefinitions>
+        <Grid Grid.Row="0" Background="#FF76E383" Panel.ZIndex="-2">
+            <TextBlock HorizontalAlignment="Center" VerticalAlignment="Top" FontSize="18" Grid.Row="0">Данные о расходных материалах</TextBlock>
+        </Grid>
+        <DataGrid x:Name="dgridConsData" AutoGenerateColumns="False" IsReadOnly="True" Grid.Row="1">
+                <DataGrid.Columns>
+                    <DataGridTextColumn Header="Оборудование" Width="200" Binding="{Binding Equipment.Name}"/>
+                    <DataGridTextColumn Header="Всего" Width="55" Binding="{Binding Equipment.Qty}"/>
+                    <DataGridTextColumn Header="В наличии" Width="80" Binding="{Binding InStock, UpdateSourceTrigger=PropertyChanged}"/>
+                    <DataGridTextColumn Header="В прокате" Width="80" Binding="{Binding InProkat, UpdateSourceTrigger=PropertyChanged}"/>
+                </DataGrid.Columns>
+            </DataGrid>
+            <Button x:Name="btnBack" Grid.Row="3" HorizontalAlignment="Left" VerticalAlignment="Center" Content="Назад" Click="btnBack_Click" Margin="5,0,0,0"/>
         
     </Grid>
 </Page>
