--- a/Igora/Pages/OrdersListPage.xaml
+++ b/Igora/Pages/OrdersListPage.xaml
@@ -15,7 +15,7 @@
             <RowDefinition Height="30"/>
             <RowDefinition Height="70"/>
             <RowDefinition Height="457*"/>
-            <RowDefinition Height="60"/>
+            <RowDefinition Height="50"/>
         </Grid.RowDefinitions>
 
         <Grid Grid.Row="0" Background="#FF76E383" Grid.ColumnSpan="4" Panel.ZIndex="-2">
@@ -88,6 +88,6 @@
         </DataGrid>
 
         <Button x:Name="btnBack" Grid.Row="3" HorizontalAlignment="Left" VerticalAlignment="Center" Content="Назад" Click="btnBack_Click" Margin="5,0,0,0"/>
-        <Image x:Name="imgAddOrder" Grid.Row="3" Height="30" Width="30" HorizontalAlignment="Left" VerticalAlignment="Center" Source="/Resources/Добавить.png" Margin="5"  Cursor="Hand" MouseLeftButtonDown="imgAddOrder_MouseLeftButtonDown"/>
+        <Image x:Name="imgAddOrder" Grid.Row="3" Height="30" Width="30" HorizontalAlignment="Right" VerticalAlignment="Center" Source="/Resources/Добавить.png" Margin="5"  Cursor="Hand" MouseLeftButtonDown="imgAddOrder_MouseLeftButtonDown"/>
     </Grid>
 </Page>
