--- a/Igora/App.xaml
+++ b/Igora/App.xaml
@@ -3,7 +3,7 @@
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:local="clr-namespace:Igora" xmlns:System="clr-namespace:System;assembly=mscorlib"
              xmlns:xctk="http://schemas.xceed.com/wpf/xaml/toolkit"
-             StartupUri="MainWindow.xaml">
+             StartupUri="LogInWindow.xaml">
     <Application.Resources>
         
         <System:String x:Key="Company">Игора</System:String>
