--- a/Igora/Pages/ProfilePage.xaml
+++ b/Igora/Pages/ProfilePage.xaml
@@ -23,9 +23,9 @@
         <Grid Grid.Row="0" Background="#FF76E383" Grid.ColumnSpan="4" Panel.ZIndex="-2">
             <TextBlock HorizontalAlignment="Center" VerticalAlignment="Center" FontSize="18">Профиль</TextBlock>
         </Grid>
-        <Image x:Name="UserPic" Grid.Row="1" Grid.Column="2" Margin="10,10,0,0" Height="120" Width="120" Source="{Binding UserPic}" Stretch="UniformToFill" VerticalAlignment="Top" HorizontalAlignment="Left" Grid.RowSpan="2"/>
+        <Image x:Name="UserPic" Grid.Row="1" Grid.Column="2" Margin="10,10,0,0" Height="140" Width="140" Source="{Binding UserPic}" Stretch="Uniform" VerticalAlignment="Top" HorizontalAlignment="Left" Grid.RowSpan="2"/>
         <StackPanel Grid.Row="1" Grid.Column="3" Orientation="Vertical" Margin="10,10,10,10" Grid.RowSpan="2">
-            <TextBlock Grid.Column="2" Grid.Row="1" FontSize="18"  HorizontalAlignment="Left" Margin="5" Height="22" VerticalAlignment="Center" Width="300" Foreground="#FF498C51" Text="{Binding Role.Name}"></TextBlock>
+            <TextBlock Grid.Column="2" Grid.Row="1" FontSize="18"  HorizontalAlignment="Left" Margin="0,5,5,5" Height="22" VerticalAlignment="Center" Width="300" Foreground="#FF498C51" Text="{Binding Role.Name}"></TextBlock>
             <TextBlock FontSize="16"  HorizontalAlignment="Left" Text="{Binding Surname}"></TextBlock>
             <TextBlock FontSize="16" HorizontalAlignment="Left" Text="{Binding Name}"></TextBlock>
             <TextBlock FontSize="16"  HorizontalAlignment="Left" Text="{Binding Patronymic}"></TextBlock>
@@ -48,6 +48,7 @@
             <Button x:Name="btnReports" Height="30" HorizontalAlignment="Stretch" Margin="5" Width="250" Click="btnReports_Click">Отчеты</Button>
             <Button x:Name="btnLoginStory" Height="30" HorizontalAlignment="Stretch" Margin="5" Width="250" Click="btnLoginStory_Click">История входа</Button>
             <Button x:Name="btnConsumableData" Height="30" HorizontalAlignment="Stretch" Margin="5" Width="250" Click="btnConsumableData_Click">Данные о расходных материалах</Button>
+            <Button x:Name="btnClientsList" Height="30" HorizontalAlignment="Stretch" Margin="5" Width="250" Click="btnClientsList_Click">Список клиентов</Button>
         </StackPanel>
         <Grid Grid.Row="1" Grid.RowSpan="2" Grid.Column="1" Background="#FF76E383"></Grid>
     </Grid>
